crates/biome_cli/tests/snapshots/main_commands_ci/ci_formatter_linter_organize_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  },
  "organizeImports": {
    "enabled": true
  }
}
```

## `file.js`

```js

import { B, C } from "b.js"
import A from "a.js"


something( )
    
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js organizeImports ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Import statements differs from the output
  
    1 1 │   
    2   │ - import·{·B,·C·}·from·"b.js"
    3   │ - import·A·from·"a.js"
      2 │ + import·A·from·"a.js"
      3 │ + import·{·B,·C·}·from·"b.js"
    4 4 │   
    5 5 │   
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - 
    2   │ - import·{·B,·C·}·from·"b.js"
    3   │ - import·A·from·"a.js"
    4   │ - 
      1 │ + import·{·B,·C·}·from·"b.js";
      2 │ + import·A·from·"a.js";
    5 3 │   
    6   │ - something(·)
    7   │ - ····
      4 │ + something();
      5 │ + 
  

```

```block
file.js ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
Checked 1 file(s) in <TIME>
```

```block

Found 3 error(s)
```


