crates/biome_cli/tests/snapshots/main_commands_ci/ignore_vcs_ignored_file_via_cli.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `./.git`

```git

```

## `./.gitignore`

```gitignore

file2.js

```

## `file1.js`

```js
array.map(sentence => sentence.split(' ')).flat();
```

## `file2.js`

```js
foo.call();


	bar.call();
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file1.js:1:1 lint/complexity/useFlatMap  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The call chain .map().flat() can be replaced with a single .flatMap() call.
  
  > 1 │ array.map(sentence => sentence.split(' ')).flat();
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Replace the chain with .flatMap().
  
  - array.map(sentence·=>·sentence.split('·')).flat();
  + array.flatMap(sentence·=>·sentence.split('·'));
  

```

```block
file1.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
file1.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - array.map(sentence·=>·sentence.split('·')).flat();
      1 │ + array.map((sentence)·=>·sentence.split("·")).flat();
      2 │ + 
  

```

```block
file1.js ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The file contains diagnostics that needs to be addressed.
  

```

```block
Checked 1 file(s) in <TIME>
```

```block

Found 4 error(s)
```


